--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.21.3",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "validator": "^13.11.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
